# YNewsScrape

./: .gitignore  Makefile  README.md  pyproject.toml
ynewsscrape/: __main__.py  error.py  ynewsscrape.py
