[tool.poetry]
name = "ynewsscrape"
version = "0.1.0"
description = ""
authors = ["hakshu <flyhighup.air25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pyproject-flake8 = "^6.0.0.post1"
flake8-isort = "^6.0.0"
flake8-quotes = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.py$'

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 79
inline-quotes = '"'
exclude = [
  ".git",
  ".venv",
  "*_cache"
]

[tool.mypy]
python_version = "3.11"
